--- a/resources/sass/gallery.css
+++ b/resources/sass/gallery.css
@@ -18,29 +18,61 @@ li {
 .main {
   height: 100%;
   background-color: grey;
-  padding: 20px;
+  padding: 20px 20px 0 20px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 1fr minmax(60px, auto);
+  -ms-grid-columns: 1fr;
+      grid-template: 1fr minmax(60px, auto)/1fr;
+  grid-row-gap: 15px;
+      grid-template-areas: "list" "footer";
+}
+
+.main .footer {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  grid-area: footer;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  display: -ms-grid;
+  display: grid;
+  justify-items: center;
+}
+
+.main .footer .button_load {
+  -ms-grid-column: 2;
+  grid-column: 2/2;
+  height: 40px;
+  width: 90px;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+  background-color: #c94e4e;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  border: none;
+  outline: none;
+  text-transform: uppercase;
+  font-size: 14px;
+  color: #f2f2f2;
+}
+
+.main .footer .button_load:hover {
+  opacity: 0.6;
 }
 
 .card_list {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: list;
   display: -ms-grid;
   display: grid;
+  -ms-grid-rows: 200px;
   -ms-grid-columns: (minmax(250px, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      grid-template: 200px/repeat(auto-fit, minmax(250px, 1fr));
   grid-gap: 10px;
-}
-
-@media all and (max-width: 1024px) {
-  .card_list {
-    -ms-grid-columns: (minmax(200px, 1fr))[auto-fit];
-        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  }
-}
-
-@media all and (max-width: 768px) {
-  .card_list {
-    -ms-grid-columns: (minmax(200px, 1fr))[auto-fit];
-        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  }
 }
 
 .card_item {
@@ -50,8 +82,9 @@ li {
           box-shadow: 0 14px 28px #222831, 0 10px 10px #222831;
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: minmax(auto, 200px) 50px;
-      grid-template-rows: minmax(auto, 200px) 50px;
+  -ms-grid-rows: minmax(auto, 160px) 40px;
+  -ms-grid-columns: 1fr;
+      grid-template: minmax(auto, 160px) 40px/1fr;
 }
 
 .card_item .card_image img {
@@ -60,14 +93,20 @@ li {
   width: 100%;
   height: 100%;
   opacity: 0.9;
+  overflow: hidden;
 }
 
 .card_item .card_item_elems {
   background-color: #222831;
-  padding: 5px;
+  padding: 10px;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 1fr;
       grid-template-columns: 1fr 1fr;
+  bottom: 0;
+}
+
+.card_item .card_item_elems .card_item-user {
+  text-align: end;
 }
 /*# sourceMappingURL=gallery.css.map */
