--- a/public/css/gallery.css
+++ b/public/css/gallery.css
@@ -20,7 +20,7 @@ li {
   background-color: grey;
   padding: 20px 20px 0 20px;
   display: grid;
-  grid-template: 1fr minmax(60px, auto)/1fr;
+  grid-template: 1fr 60px / 1fr;
   grid-row-gap: 15px;
   grid-template-areas: "list" "footer";
 }
@@ -34,8 +34,8 @@ li {
 
 .main .footer .button_load {
   grid-column: 2/2;
-  height: 40px;
-  width: 90px;
+  height: 30px;
+  width: 120px;
   border-radius: 20px;
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
@@ -57,8 +57,8 @@ li {
 .card_list {
   grid-area: list;
   display: grid;
-  grid-template: 200px/repeat(auto-fit, minmax(250px, 1fr));
-  grid-gap: 10px;
+  grid-template: 220px/repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 15px;
 }
 
 .card_item {
@@ -66,7 +66,7 @@ li {
   background: radial-gradient(circle, white 0%, #292c31 100%);
   box-shadow: 0 14px 28px #222831, 0 10px 10px #222831;
   display: grid;
-  grid-template: minmax(auto, 160px) 40px/1fr;
+  grid-template: minmax(auto, 160px) 60px/1fr;
 }
 
 .card_item .card_image img {
