--- a/resources/sass/gallery.css
+++ b/resources/sass/gallery.css
@@ -21,9 +21,9 @@ li {
   padding: 20px 20px 0 20px;
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: 1fr minmax(60px, auto);
+  -ms-grid-rows: 1fr 60px;
   -ms-grid-columns: 1fr;
-      grid-template: 1fr minmax(60px, auto)/1fr;
+      grid-template: 1fr 60px / 1fr;
   grid-row-gap: 15px;
       grid-template-areas: "list" "footer";
 }
@@ -42,8 +42,8 @@ li {
 .main .footer .button_load {
   -ms-grid-column: 2;
   grid-column: 2/2;
-  height: 40px;
-  width: 90px;
+  height: 30px;
+  width: 120px;
   border-radius: 20px;
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
@@ -69,10 +69,10 @@ li {
   grid-area: list;
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: 200px;
+  -ms-grid-rows: 220px;
   -ms-grid-columns: (minmax(250px, 1fr))[auto-fit];
-      grid-template: 200px/repeat(auto-fit, minmax(250px, 1fr));
-  grid-gap: 10px;
+      grid-template: 220px/repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 15px;
 }
 
 .card_item {
@@ -82,9 +82,9 @@ li {
           box-shadow: 0 14px 28px #222831, 0 10px 10px #222831;
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: minmax(auto, 160px) 40px;
+  -ms-grid-rows: minmax(auto, 160px) 60px;
   -ms-grid-columns: 1fr;
-      grid-template: minmax(auto, 160px) 40px/1fr;
+      grid-template: minmax(auto, 160px) 60px/1fr;
 }
 
 .card_item .card_image img {
