--- a/resources/sass/gallery.css
+++ b/resources/sass/gallery.css
@@ -3,7 +3,7 @@ html {
   width: 100%;
   height: 100%;
   margin: 0px;
-  background-color: grey;
+  background-color: #155f66;
   color: #f2f2f2;
 }
 
@@ -17,13 +17,13 @@ li {
 
 .main {
   height: 100%;
-  background-color: grey;
+  background-color: #155f66;
   padding: 20px 20px 0 20px;
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: 1fr 60px;
+  -ms-grid-rows: 1fr 30px;
   -ms-grid-columns: 1fr;
-      grid-template: 1fr 60px / 1fr;
+      grid-template: 1fr 30px / 1fr;
   grid-row-gap: 15px;
       grid-template-areas: "list" "footer";
 }
@@ -43,13 +43,8 @@ li {
   -ms-grid-column: 2;
   grid-column: 2/2;
   height: 30px;
-  width: 120px;
-  border-radius: 20px;
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
-  -ms-border-radius: 20px;
-  -o-border-radius: 20px;
-  background-color: #c94e4e;
+  width: 140px;
+  background-color: #081112;
   -webkit-box-shadow: none;
           box-shadow: none;
   border: none;
@@ -57,10 +52,11 @@ li {
   text-transform: uppercase;
   font-size: 14px;
   color: #f2f2f2;
+  opacity: 0.7;
 }
 
 .main .footer .button_load:hover {
-  opacity: 0.6;
+  opacity: 1;
 }
 
 .card_list {
@@ -69,17 +65,17 @@ li {
   grid-area: list;
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: 220px;
-  -ms-grid-columns: (minmax(250px, 1fr))[auto-fit];
-      grid-template: 220px/repeat(auto-fit, minmax(250px, 1fr));
+  -ms-grid-rows: (minmax(auto, 220px))[auto-fill];
+  -ms-grid-columns: (minmax(250px, 1fr))[auto-fill];
+      grid-template: repeat(auto-fill, minmax(auto, 220px))/repeat(auto-fill, minmax(250px, 1fr));
   grid-gap: 15px;
 }
 
 .card_item {
-  background: #292c31;
-  background: radial-gradient(circle, white 0%, #292c31 100%);
-  -webkit-box-shadow: 0 14px 28px #222831, 0 10px 10px #222831;
-          box-shadow: 0 14px 28px #222831, 0 10px 10px #222831;
+  background: #0294a2;
+  background: radial-gradient(circle, white 0%, #0294a2 100%);
+  -webkit-box-shadow: 0 14px 28px #081112, 0 10px 10px #081112;
+          box-shadow: 0 14px 28px #081112, 0 10px 10px #081112;
   display: -ms-grid;
   display: grid;
   -ms-grid-rows: minmax(auto, 160px) 60px;
@@ -97,7 +93,7 @@ li {
 }
 
 .card_item .card_item_elems {
-  background-color: #222831;
+  background-color: #133a3d;
   padding: 10px;
   display: -ms-grid;
   display: grid;
