--- a/resources/sass/gallery.scss
+++ b/resources/sass/gallery.scss
@@ -10,12 +10,22 @@
 // $card-background: #2F3D3B;//primary-2
 // $header-background: #13211F;//primary-3
 // $footer-background: #0E1E1B;//primary-4
+// $text-color: #f2f2f2;
+// $body-background: #155f66; //primary-0
+// $card-background: #0294a2; //primary-2
+// $header-background: #133a3d; //primary-3
+// $footer-background: #081112; //primary-4
 $text-color: #f2f2f2;
-$body-background: #155f66; //primary-0
-$card-background: #0294a2; //primary-2
-$header-background: #133a3d; //primary-3
-$footer-background: #081112; //primary-4
+$body-background: #1C1C4A; //primary-0
+$card-background: #4F4F70; //primary-2
+$header-background: #04042C; //primary-3
+$footer-background: #10101D; //primary-4
 
+$color-primary-0: #04042C;	// Main Primary color */
+$color-primary-1: #0000BA;
+$color-primary-2: #141479;
+$color-primary-3: #10101D;
+$color-primary-4: #1C1C4A;
 
 body,
 html {
