--- a/resources/sass/gallery.css
+++ b/resources/sass/gallery.css
@@ -3,7 +3,6 @@ html {
   width: 100%;
   height: 100%;
   margin: 0px;
-  background-color: #1C1C4A;
   color: #f2f2f2;
 }
 
@@ -17,7 +16,8 @@ li {
 
 .main {
   height: 100%;
-  background-color: #1C1C4A;
+  background: -webkit-gradient(linear, left top, left bottom, from(#1c1c4a), color-stop(#10101d), to(#05051a));
+  background: linear-gradient(#1c1c4a, #10101d, #05051a);
   padding: 20px 20px 0 20px;
   display: -ms-grid;
   display: grid;
@@ -44,7 +44,7 @@ li {
   grid-column: 2/2;
   height: 30px;
   width: 140px;
-  background-color: #10101D;
+  background-color: #10101d;
   -webkit-box-shadow: none;
           box-shadow: none;
   border: none;
@@ -72,10 +72,10 @@ li {
 }
 
 .card_item {
-  background: #4F4F70;
-  background: radial-gradient(circle, #04042C 0%, #10101D 100%);
-  -webkit-box-shadow: 0 14px 28px #10101D, 0 10px 10px #10101D;
-          box-shadow: 0 14px 28px #10101D, 0 10px 10px #10101D;
+  background: #4f4f70;
+  background: radial-gradient(circle, #05051a 0%, #10101d 100%);
+  -webkit-box-shadow: 0 14px 28px #10101d, 0 10px 10px #10101d;
+          box-shadow: 0 14px 28px #10101d, 0 10px 10px #10101d;
   display: -ms-grid;
   display: grid;
   -ms-grid-rows: minmax(auto, 160px) 60px;
@@ -93,7 +93,7 @@ li {
 }
 
 .card_item .card_item_elems {
-  background-color: #04042C;
+  background-color: #05051a;
   padding: 10px;
   display: -ms-grid;
   display: grid;
