--- a/public/css/gallery.css
+++ b/public/css/gallery.css
@@ -11,12 +11,15 @@ li {
 }
 
 .wrapper {
-  height: 100vh;
+  min-height: 100vh;
+  height: 100%;
 }
 
 .main {
   height: 100%;
+  min-height: 100vh;
   background: linear-gradient(#1c1c4a, #10101d, #05051a);
+  background-repeat: repeat;
   padding: 20px 20px 0 20px;
   display: grid;
   grid-template: 1fr 30px / 1fr;
