--- a/resources/sass/gallery.css
+++ b/resources/sass/gallery.css
@@ -11,13 +11,16 @@ li {
 }
 
 .wrapper {
-  height: 100vh;
+  min-height: 100vh;
+  height: 100%;
 }
 
 .main {
   height: 100%;
+  min-height: 100vh;
   background: -webkit-gradient(linear, left top, left bottom, from(#1c1c4a), color-stop(#10101d), to(#05051a));
   background: linear-gradient(#1c1c4a, #10101d, #05051a);
+  background-repeat: repeat;
   padding: 20px 20px 0 20px;
   display: -ms-grid;
   display: grid;
