--- a/resources/sass/gallery.scss
+++ b/resources/sass/gallery.scss
@@ -34,17 +34,20 @@ li {
 }
 
 .wrapper {
-    height: 100vh;
+    min-height: 100vh;
+    height: 100%;
 }
 
 .main {
     height: 100%;
+    min-height: 100vh;
     // background-color: $body-background;
     background: linear-gradient(
         $body-background,
         $footer-background,
         $header-background
     );
+    background-repeat: repeat;
     padding: 20px 20px 0 20px;
     display: grid;
     grid-template: 1fr 30px / 1fr;
